package eu.telecomnancy.labfx.model;

import java.util.List;

public class DatabaseVilles {
    private List<Ville> cities;

    public List<Ville> getCities() {
        return cities;
    }

    public void setCities(List<Ville> cities) {
        this.cities = cities;
    }
}