package eu.telecomnancy.labfx.model;

public enum StatusType {
  NEUTRAL,
  RESERVED,
  ACCEPTED,
  REFUSED,
  COMPLETED
}